# wamv

./: .gitignore  LICENSE  README.md  notes.md
deploy/: README.md
wamv_ws/src/wamv_bringup/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_bringup/launch/: bringup_laptop.launch  bringup_puget.launch  bringup_rviz.launch  current.launch  current_0.launch  launch_drivers.launch  wamv_configuration.launch
wamv_ws/src/wamv_control/: CMakeLists.txt  README.md  package.xml  setup.py
wamv_ws/src/wamv_control/launch/: controls.launch  interpreter.launch  pid.launch  teleoperations.launch  teleoperations_.launch  test_both_pid.launch  test_heading_pid.launch  test_lateral_pid.launch  test_pid.launch  test_speed_pid.launch
wamv_ws/src/wamv_control/params/: heading_controller_params.yaml  heading_params.yaml  heading_test_params.yaml  interpreter_params.yaml  lateral_controller_params.yaml  lateral_test_params.yaml  speed_controller_params.yaml  speed_params.yaml  speed_test_params.yaml
wamv_ws/src/wamv_control/src/: README.md  calc_heading.py  heading_tester.py  pid_interpreter.py  pid_tester.py  set_test_headings.py  set_test_speeds.py  speed_tester.py  teleop_controller.py  teleoperations_controller.py
wamv_ws/src/wamv_description/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_description/launch/: base.launch  orig.launch
wamv_ws/src/wamv_description/mesh/: WAM-V-Base123.dae  torqeedo.dae
wamv_ws/src/wamv_description/urdf/: sensor_camera.xacro  sensor_gps.xacro  sensor_imu.xacro  sensor_p3d.xacro  sensor_velodyne.xacro  torqeedo.xacro  wamv_base.xacro  wamv_robotx.xacro
wamv_ws/src/wamv_driver/: CMakeLists.txt  package.xml  setup.py
wamv_ws/src/wamv_driver/launch/: __velodyne.launch  advanced_navigation_device.launch  an_device.launch  crio.launch  drivers.launch  heartbeat.launch  imu_odometry.launch  ladybug.launch  laser_scan_filter.launch  motor_command_interpreter.launch  motor_command_interpretter.launch  motor_controller.launch  odometry_publisher.launch  status_light_controller.launch  status_light_interpreter.launch  status_light_interpretter.launch  utm_transform.launch  velodyne.launch  velodyne_.launch
wamv_ws/src/wamv_driver/params/: velodyne_calibration.yaml
wamv_ws/src/wamv_driver/src/: heartbeat.py  imu_odometry.py  imu_tf_publisher.py  laser_scan.py  motor_command_interpreter.py  motor_command_interpretter.py  motor_interpreter.py  odometry_publisher.backup  odometry_publisher.py  status_light_interpreter.py  status_light_interpretter.py  wamv_odometry.cpp
wamv_ws/src/wamv_driver/tests/: tests.py
wamv_ws/src/wamv_fixer/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_fixer/launch/: decomposer.launch  fixer.launch
wamv_ws/src/wamv_fixer/params/: heading_controller_params.yaml
wamv_ws/src/wamv_fixer/src/: decomposer.py  fixer.py
wamv_ws/src/wamv_localization/: CMakeLists.txt  README.md  package.xml  setup.py
wamv_ws/src/wamv_localization/launch/: costmap.launch  ekf.launch  imu_odometry.launch  localization.launch  mapping.launch  transform.launch  ukf.launch  wamv_costmap.launch  wamv_gmapping.launch  wamv_gmapping_2.launch  wamv_localization.launch  wamv_transform.launch  wamv_ukf.launch
wamv_ws/src/wamv_localization/params/: costmap_common.yaml  ekf_se_map.yaml  ekf_se_odom.yaml  global_costmap_params.yaml  local_costmap_params.yaml  localization.yaml  navsat_transform.yaml
wamv_ws/src/wamv_localization/robot_description/: wamv.urdf
wamv_ws/src/wamv_localization/src/: imu_odometry.py  odometry.cpp  tf_publisher.cpp  wamv_tf_publisher.cpp
wamv_ws/src/wamv_msgs/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_msgs/msg/: Gate.msg  Heartbeat.msg  MotorCommand.msg  MotorSpeeds.msg  ScanCode.msg  SymbolDock.msg  VelocityCommand.msg
wamv_ws/src/wamv_navigation/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_navigation/launch/: heading_unit_converter.launch  move_base.launch  navigation_config.launch  pid_tuning.launch
wamv_ws/src/wamv_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml
wamv_ws/src/wamv_navigation/src/: calc_heading.py  heading_unit_converter.py  move_base_action_client.py  move_base_action_server.py  setpoint_publisher.py  speed_converter.py  velocity_publisher.py
wamv_ws/src/wamv_past/: CMakeLists.txt  package.xml  setup.py
wamv_ws/src/wamv_past/launch/: past.launch  stamper.launch
wamv_ws/src/wamv_past/src/: stamper.py
wamv_ws/src/wamv_tasks/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_tasks/launch/: heartbeat.launch  straight_line.launch
wamv_ws/src/wamv_tasks/nodes/: heartbeat.cpp
wamv_ws/src/wamv_tasks/src/: heartbeat.py  straight_line.py
wamv_ws/src/wamv_tests/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_viz/: CMakeLists.txt  package.xml
wamv_ws/src/wamv_viz/launch/: odom_viz.launch
wamv_ws/src/wamv_viz/rviz/: axes and lidars.rviz  competition.rviz  current.rviz  date_lite.rviz  odom.rviz  odometry.rviz  sensors.rviz
wolvmarine_ws/src/wolvmarine_bringup/: CMakeLists.txt  package.xml
wolvmarine_ws/src/wolvmarine_bringup/launch/: bringup_base.launch  bringup_puget.launch  bringup_remote.launch
wolvmarine_ws/src/wolvmarine_control/: CMakeLists.txt  package.xml
wolvmarine_ws/src/wolvmarine_control/launch/: controls.launch  pid.launch
wolvmarine_ws/src/wolvmarine_control/src/: teleoperations_controller.py
wolvmarine_ws/src/wolvmarine_controls/: CMakeLists.txt  package.xml  setup.py
wolvmarine_ws/src/wolvmarine_controls/launch/: controls.launch  pid.launch  teleoperations.launch
wolvmarine_ws/src/wolvmarine_controls/src/: pid_interpreter.py  teleoperations_controller.py
wolvmarine_ws/src/wolvmarine_drivers/: CMakeLists.txt  package.xml  setup.py
wolvmarine_ws/src/wolvmarine_fixer/: CMakeLists.txt  package.xml  setup.py
wolvmarine_ws/src/wolvmarine_localization/: CMakeLists.txt  package.xml  setup.py
wolvmarine_ws/src/wolvmarine_msgs/: CMakeLists.txt  package.xml
wolvmarine_ws/src/wolvmarine_navigation/: CMakeLists.txt  package.xml  setup.py
wolvmarine_ws/src/wolvmarine_tasks/: CMakeLists.txt  package.xml  setup.py
(+130 files in other folders)
