<?xml version="1.0"?>
<package format="2">

  <name>wamv_bringup</name>
  <version>0.0.1</version>
  <description> WAMV Bringup Launcher</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>wamv_driver</depend>
  <depend>wamv_transform</depend>

</package>
