<?xml version="1.0"?>
<package>
  <name>wamv_control</name>
  <version>1.0.0</version>
  <description>Teleoperation Controller Package</description>
  <maintainer email="jcoller@umich.edu">James Coller</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
