<?xml version="1.0"?>
<package format="2">
  <name>wamv_description</name>
  <version>0.0.0</version>
  <description>The wamv description package</description>
  <maintainer email="bsb@todo.todo">bsb</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>velodyne_description</depend>

</package>
