<?xml version="1.0"?>
<package format="2">
  <name>wamv_driver</name>
  <version>0.0.1</version>
  <description>The wamv driver package</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gps_common</depend>
  <depend>geometry_msgs</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_pointcloud</depend>

</package>
