<?xml version="1.0"?>
<package format="2">

  <name>wamv_driver</name>
  <version>0.0.1</version>
  <description>The wamv driver package</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rostest</depend>

  <depend>advanced_navigation_driver</depend>
  <!-- <depend>ladybug3_ros_pkg</depend> -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosserial_python</depend>
  <depend>sensor_msgs</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_pointcloud</depend>

  <test_depend>rostest</test_depend>

</package>
