<?xml version="1.0"?>
<package format="2">

  <name>wamv_fixer</name>
  <version>1.0.0</version>
  <description>wamv platform</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>





</package>
