<?xml version="1.0"?>
<package format="2">

  <name>wamv_localization</name>
  <version>0.0.0</version>
  <description>Navigation packages</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gmapping</depend>
  <depend>gps_common</depend>
  <depend>move_base</depend>
  <depend>nav_msgs</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

</package>
