<?xml version="1.0"?>
<package>
  <name>wamv_tasks</name>
  <version>1.0.0</version>
  <description>RobotX heartbeat package</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>wamv_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>wamv_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
