<?xml version="1.0"?>
<package format="2">

  <name>wamv_tasks</name>
  <version>1.0.0</version>
  <description>Tasks package for the wamv platform</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wamv_msgs</depend>

</package>
