<?xml version="1.0"?>
<package format="2">

  <name>wamv_tests</name>
  <version>1.0.0</version>
  <description>Tests package for the wamv platform</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
