<?xml version="1.0"?>
<package format="2">

  <name>wamv_viz</name>
  <version>1.0.0</version>
  <description>Visualization package for the wamv platform</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rviz</depend>
  <depend>wamv_localization</depend>

</package>
