<?xml version="1.0"?>
<package format="2">

    <name>wolvmarine_bringup</name>
    <version>0.0.1</version>
    <description>
        This package contains launch files for bringing up the WolvMarine's
        base and remote computers.
    </description>
    <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>wolvmarine_controls</depend>
    <depend>wolvmarine_drivers</depend>
    <depend>wolvmarine_fixer</depend>
    <depend>wolvmarine_localization</depend>
    <depend>wolvmarine_transforms</depend>
    <depend>wolvmarine_viz</depend>

</package>
