<?xml version="1.0"?>
<package format="2">

    <name>wolvmarine_fixer</name>
    <version>0.0.1</version>
    <description>
        The package contains utilities for converting/fixing the sensor outputs
        of the WolvMarine robot. There are inconsistencies between the sensor
        outputs and ROS standards. This package is a temporary fix as these
        issues should be resolved at their source, perhaps using a nodelet
        wrapper.
    </description>
    <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>message_filters</depend>
    <depend>orocos_kdl</depend>
    <depend>rospy</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>

</package>
