<?xml version="1.0"?>
<package format="2">

  <name>wamv_msgs</name>
  <version>1.0.0</version>
  <description>WAM-V messages package</description>
  <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

</package>
