<?xml version="1.0"?>
<package format="2">

    <name>wolvmarine_msgs</name>
    <version>0.0.1</version>
    <description>
        This package contains messages for the rest of the WolvMarine packages.
        The messages have all been placed here to simplify dependencies and
        build order issues.
    </description>
    <maintainer email="mjsyp@umich.edu">Michael Sypniewski</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>

</package>
